Changes to sahil.html
Added functionality to bored api on sahil.html. Next steps are to make the CSS look better.

--- a/templates/sahil.html
+++ b/templates/sahil.html
@@ -1,6 +1,7 @@
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
+{% set activity = activity %}
 {% set project = "Sahil" %}
 {% set imgMaskOn = pic1 %}
 {% set imgMaskOff = pic2 %}
@@ -48,11 +49,7 @@
     <div style="text-align:center">
         <a href="{{ journal }}" class="btn">Sahil's Journal</a>
     </div>
-    <form action="{{ url_for('sahil') }}" id="define" method="POST" >
-        <label for="city">Find a city:</label>
-        <input name="city" id="city">
-        <input type="submit" value="Find a hotel">
-    </form>
+    <p style="font-family:'Bebas Neue'; font-size:30px" > Find hotels for cities </p>
     <table>
         <tr>
             <td>Name: </td>
@@ -68,12 +65,21 @@
 
         </tr>
     </table>
+    <form action="{{ url_for('sahil') }}" id="inputHotel" method="POST" >
+        <label for="city">Enter a city:</label>
+        <input name="city" id="city">
+        <input type="submit" value="Find a hotel">
+    </form>
+    <p style="font-family:'Bebas Neue'; font-size:30px" > Activities if you are bored </p>
     <table>
         <tr>
             <td>Activity: </td>
             <td>{{ activity }}</td>
         </tr>
     </table>
+    <form method ="post" action="{{ url_for('sahil') }}">
+        <button type="submit" name="askActivity" value="submit_a"> Find a New Activity </button>
+    </form>
     <script>
         function toggleMask() {
             const image = document.getElementById('picture');
@@ -83,10 +89,6 @@
                 image.src = "{{ imgMaskOn }}";
             }
         }
-
-{#        fetch('https://www.boredapi.com/api/activity')
-            .then(res => res.json())
-            .then(data => console.log(data))#}
     </script>
 {% endblock %}
 
