--- a/templates/sahil.html
+++ b/templates/sahil.html
@@ -37,49 +37,57 @@
             transform: translateY(-1px);
             box-shadow: 0 5px 10px rgba(255, 255, 255, 0.2);
         }
+        .box {
+            padding: 8px;
+            margin: 25px;
+        }
     </style>
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+    <div class="box">
         <p style="font-family:'Bebas Neue'; font-size:120px" > Sahil Samar </p>
-    </div>
-    <div class="col-12" style="text-align:center">
-        <p style="font-family:'Bebas Neue'; font-size:40px"> Click the image to take off the mask! </p>
-        <img class="img-responsive py-3" id="picture" src="{{ imgMaskOff }}" alt="" width="400" height="Auto" onclick="toggleMask('{{i}}')">
-    </div>
-    </br>
-    <div style="text-align:center">
-        <a href="{{ journal }}" class="btn">Sahil's Journal</a>
-    </div>
-    <p style="font-family:'Bebas Neue'; font-size:30px" > Find hotels for cities </p>
-    <table>
-        <tr>
-            <td>Name: </td>
-            <td>{{myHotel['name']}}</td>
-        </tr>
-        <tr>
-            <td>Link: </td>
-            <td>{{myHotel['link']}}</td>
-        </tr>
-        <tr>
-            <td>Rating: </td>
-            <td>{{myHotel['rating']}}</td>
+        <div class="col-12" style="text-align:center">
+            <p style="font-family:'Bebas Neue'; font-size:40px"> Click the image to take off the mask! </p>
+            <img class="img-responsive py-3" id="picture" src="{{ imgMaskOff }}" alt="" width="400" height="Auto" onclick="toggleMask('{{i}}')">
+            <br>
+            <a href="{{ journal }}" class="btn">Sahil's Journal</a>
+        </div>
+        <p style="font-family:'Bebas Neue'; font-size:30px" > Find hotels for cities </p>
+        <table>
+            <tr>
+                <td>Name: </td>
+                <td>{{myHotel['name']}}</td>
+            </tr>
+            <tr>
+                <td>Link: </td>
+                <td>{{myHotel['link']}}</td>
+            </tr>
+            <tr>
+                <td>Rating: </td>
+                <td>{{myHotel['rating']}}</td>
 
-        </tr>
-    </table>
-    <form action="{{ url_for('sahil') }}" id="inputHotel" method="POST" >
-        <label for="city">Enter a city:</label>
-        <input name="city" id="city">
-        <input type="submit" value="Find a hotel">
-    </form>
-    <p style="font-family:'Bebas Neue'; font-size:30px" > Activities if you are bored </p>
-    <table>
-        <tr>
-            <td>Activity: </td>
-            <td>{{ activity }}</td>
-        </tr>
-    </table>
-    <form method ="post" action="{{ url_for('sahil') }}">
-        <button type="submit" name="askActivity" value="submit_a"> Find a New Activity </button>
-    </form>
+            </tr>
+        </table>
+        <form action="{{ url_for('sahil') }}" id="inputHotel" method="POST" >
+            <label for="city">Enter a city:</label>
+            <input name="city" id="city">
+            <input type="submit" value="Find a hotel">
+        </form>
+        <p style="font-family:'Bebas Neue'; font-size:30px" > Activities if you are bored </p>
+        <table>
+            <tr>
+                <td>Activity: </td>
+                <td>{{ activity }}</td>
+            </tr>
+        </table>
+        <form method ="post" action="{{ url_for('sahil') }}">
+            <button type="submit" name="askActivity" value="submit_a"> Find a New Activity </button>
+        </form>
+    </div>
+
+    <div style="text-align:center">
+
+    </div>
+
+
     <script>
         function toggleMask() {
             const image = document.getElementById('picture');
