--- a/templates/sahil.html
+++ b/templates/sahil.html
@@ -49,6 +49,9 @@
             <img class="img-responsive py-3" id="picture" src="{{ imgMaskOff }}" alt="" width="400" height="Auto" onclick="toggleMask('{{i}}')">
             <br>
             <a href="{{ journal }}" class="btn">Sahil's Journal</a>
+            <a href="https://github.com/NastyEthan/NastyAwakened" class="btn">Github </a>
+            <a href="https://github.com/NastyEthan/NastyAwakened/commits?author=AD1616" class="btn">Commits  </a>
+
         </div>
         <p style="font-family:'Bebas Neue'; font-size:30px" > Find hotels for cities </p>
         <table>
