--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -118,10 +118,9 @@
 {% include "layouts/navbar.html" %}
 <div style="margin-left: 50px; margin-right: 50px">
     <div id="top" style="text-align: right" >
-        <h1>PLANNER</h1>
-        <p style="font-family: Courier New">{{mytime['LocalTime_Now']}} </p>
+        <h1>Calendar</h1>
     </div>
-    <p>This is the project's <i>WEEKLY</i> schedule - <b>a daily planner structured on a weekly basis.</b></p>
+    <p>This is the project's Calendar - <b>your classes and assignments structured on a weekly basis.</b></p>
 
   <button class="mode" onclick="toggleMode()">Toggle Dark Mode</button>
     <input type="checkbox" class="checkbox" id="color" onclick="display(id)">
